appId: de.jft.immosnapp
name: Legal
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'

---
- runFlow: '../../helpers/launch-app.yaml'
- runFlow: '../../helpers/navigate-to-workspace.yaml'
- assertVisible:
    id: 'login-view-more'
- tapOn:
    id: 'login-view-more'
- assertVisible:
    id: 'legal-view'
- runFlow: ../../helpers/go-back.yaml
- scrollUntilVisible:
    element:
      text: 'Create an account'
- tapOn: 'Create an account'
- assertVisible:
    id: 'register-view-more'
- tapOn:
    id: 'register-view-more'
- assertVisible:
    id: 'legal-view'
- assertVisible:
    id: 'legal-privacy-button'
