appId: de.jft.immosnapp
name: Login
onFlowStart:
  - runFlow: ../../../helpers/setup.yaml
  - evalScript: ${output.createdUser = output.utils.createUser()}
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}

---
- runFlow: ../../../helpers/launch-app.yaml
- runFlow: ../../../helpers/navigate-to-login.yaml
- tapOn:
    id: 'login-view-email'
- inputText: ${output.createdUser.email}
- pressKey: enter
- tapOn:
    id: 'login-view-password'
- inputText: ${output.createdUser.password}
- hideKeyboard
- tapOn:
    id: login-view-submit
- extendedWaitUntil:
    visible:
      id: rooms-list-view
    timeout: 60000
