appId: de.jft.immosnapp
name: Create Account
onFlowStart:
  - runFlow: '../../../helpers/setup.yaml'
  - evalScript: ${output.user = output.randomUser()}

---
- runFlow: ../../../helpers/launch-app.yaml
- runFlow: ../../../helpers/navigate-to-register.yaml
- tapOn:
    id: register-view-name
- inputText: ${output.user.name}
- pressKey: enter
- tapOn:
    id: register-view-username
- inputText: ${output.user.username}
- pressKey: enter
- tapOn:
    id: register-view-email
- inputText: ${output.user.email}
- pressKey: enter
- tapOn:
    id: register-view-password
- inputText: ${output.user.password}
- pressKey: enter
- tapOn:
    id: register-view-confirm-password
- inputText: ${output.user.password}
- hideKeyboard
- scrollUntilVisible:
    element:
      id: register-view-submit
    centerElement: true
- tapOn:
    id: register-view-submit
- extendedWaitUntil:
    visible:
      id: rooms-list-view
    timeout: 60000
