appId: de.jft.immosnapp
name: Server History
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowEnd:
  - evalScript: ${output.utils.deleteCreatedUsers()}

---
- runFlow: ../../helpers/launch-app.yaml
- runFlow: ../../helpers/login.yaml
- runFlow: ../../helpers/logout.yaml

- assertVisible:
    id: 'servers-history-button'
- tapOn:
    id: 'servers-history-button'
- assertVisible:
    id: 'action-sheet'
- assertVisible:
    id: 'servers-history-https://mobile.rocket.chat'

# should tap on a server history and navigate to login
- tapOn: 'Connect to https://mobile.rocket.chat as ${output.createdUser.username}'
- assertVisible:
    id: 'login-view-submit'
- assertVisible: ${output.createdUser.username}

# we are going back to add workspace from login screen
- runFlow: ../../helpers/go-back.yaml
- runFlow: ../../helpers/go-back.yaml

- extendedWaitUntil:
    visible:
      id: 'new-server-view'
    timeout: 60000
- tapOn:
    id: 'servers-history-button'
- assertVisible:
    id: 'servers-history-delete-https://mobile.rocket.chat'
- tapOn:
    id: 'servers-history-delete-https://mobile.rocket.chat'

- extendedWaitUntil:
    notVisible:
      id: 'servers-history-button'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'new-server-view'
    timeout: 60000
