appId: de.jft.immosnapp
name: Invalid Workspace

---
- runFlow: ../../../helpers/launch-app.yaml
- tapOn:
    text: 'Workspace URL. Required.'
- inputText:
    id: 'new-server-view-input'
    text: 'https://invalid.workspace.url'
- tapOn: 'Connect'
- assertVisible: .*Invalid URL.*
