appId: de.jft.immosnapp
tags:
  - 'util'

---
- extendedWaitUntil:
    visible:
      id: rooms-list-view-create-channel
    timeout: 60000
- tapOn:
    id: rooms-list-view-create-channel
- extendedWaitUntil:
    visible:
      id: new-message-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: new-message-view-create-channel
    timeout: 60000
- tapOn:
    id: new-message-view-create-channel
- extendedWaitUntil:
    visible:
      id: select-users-view
    timeout: 60000
- assertVisible:
    id: selected-users-view-submit
- tapOn:
    id: selected-users-view-submit
- extendedWaitUntil:
    visible:
      id: create-channel-view
    timeout: 60000
- tapOn:
    id: create-channel-name
- inputText: ${channelName}
- hideKeyboard

- runFlow:
    when:
      true: ${publicChannel}
    commands:
      - tapOn:
          id: create-channel-type

- scrollUntilVisible:
    element:
      id: create-channel-submit
    timeout: 60000
- tapOn:
    id: create-channel-submit

- extendedWaitUntil:
    visible:
      id: room-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: room-view-title-${channelName}
    timeout: 60000
- runFlow: ../../../helpers/go-back.yaml
- extendedWaitUntil:
    visible:
      id: rooms-list-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: rooms-list-view-item-${channelName}
    timeout: 60000
