appId: de.jft.immosnapp
tags:
  - 'util'

---
- extendedWaitUntil:
    visible:
      id: room-members-view-item-${username}
    timeout: 60000
- tapOn:
    id: room-members-view-item-${username}
- extendedWaitUntil:
    visible:
      id: action-sheet
    timeout: 60000
- assertVisible:
    id: action-sheet-handle
- tapOn:
    id: action-sheet-handle
- extendedWaitUntil:
    visible:
      id: action-sheet
    timeout: 60000
